--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+{%load static%}
 <!DOCTYPE html>
-
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilo-index.css">
+    <link rel="stylesheet" href="{% static 'productos/css/estilo-index.css'%}">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,6 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Smokum&display=swap" rel="stylesheet">
 </head>
 <body>
+    
     <header>
         <div class="container">
 		    <div class="btn-menu">
@@ -31,11 +33,11 @@
 <div class="container-menu">
 	<div class="cont-menu">
 		<nav>
-            <a href="inicio_sesion.html"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a>			
-            <a href="contacto.html" target="_blank"><i class="fa-solid fa-phone icono"></i>Contacto</a>
-            <a href="quienes_somos.html"><i class="fa-solid fa-users icono"></i>Quiénes somos</a>
+            <a href="/inicio-sesion"><i class="fa-solid fa-user icono"></i>Iniciar Sesión</a>			
+            <a href="/contacto" target="_blank"><i class="fa-solid fa-phone icono"></i>Contacto</a>
+            <a href="/quienes-somos"><i class="fa-solid fa-users icono"></i>Quiénes somos</a>
             <a href="#"><i class="fa-solid fa-gear icono"></i>Ajustes</a>
-            <a class="corona" href="version_pro.html"><i class="fa-solid fa-crown icono"></i>Pro</a>
+            <a class="corona" href="/version-pro"><i class="fa-solid fa-crown icono"></i>Pro</a>
             <i id="finalmenu" class="fa-solid fa-globe"></i>
 		</nav>
 		<label for="btn-menu"><i class="fa-solid fa-xmark"></i></label>
@@ -61,7 +63,7 @@
                         </ol>
                         <ul id="articulo1" class="carousel-inner">
                             <li class="carousel-item active">
-                                <img src="imagenes/gigabyte1.png" class="d-block w-20" alt="Slide 1">
+                                <img src="{% static 'productos/imagenes/gigabyte1.png'%}" class="d-block w-20" alt="Slide 1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Gigabyte</h5>
                                     <p>Gigabyte RTX 3090 Gaming OC 24G</p>
@@ -69,7 +71,7 @@
                                 </div>
                             </li>
                             <li class="carousel-item">
-                                <img src="imagenes/gigabyte2.png" class="d-block w-20" alt="Slide 2">
+                                <img src="{% static 'productos/imagenes/gigabyte2.png'%}" class="d-block w-20" alt="Slide 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Gigabyte</h5>
                                     <p>Graphic Card Gigabyte AORUS GeForce GTX 1080 Ti 12GB GV</p>
@@ -77,7 +79,7 @@
                                 </div>
                             </li>
                             <li class="carousel-item">
-                                <img src="imagenes/gigabyte3.png" class="d-block w-20" alt="Slide 3">
+                                <img src="{% static 'productos/imagenes/gigabyte3.png'%}" class="d-block w-20" alt="Slide 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Gigabyte</h5>
                                     <p>Gigabyte RTX 3090 Gaming OC 24G</p>
@@ -105,21 +107,21 @@
                         </ol>
                         <ul id="articulo2" class="carousel-inner">
                             <li class="carousel-item active">
-                                <img src="imagenes/ram1.png" class="d-block w-20" alt="Slide 1">
+                                <img src="{% static 'productos/imagenes/ram1.png'%}" class="d-block w-20" alt="Slide 1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>RAM Memory Corsair Vengeance, 16 Gb </p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
-                                <img src="imagenes/ram2-.png" class="d-block w-20" alt="Slide 2">
+                                <img src="{% static 'productos/imagenes/ram2-.png'%}" class="d-block w-20" alt="Slide 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>RAM Memory Impact 8GB 1 HyperX</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
-                                <img src="imagenes/ram3.png" class="d-block w-20" alt="Slide 3">
+                                <img src="{% static 'productos/imagenes/ram3.png'%}" class="d-block w-20" alt="Slide 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>A-DATA XPG Gammix D30</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
@@ -141,21 +143,21 @@
                         </ol>
                         <ul id="articulo3">
                             <li class="carousel-item active">
-                                <img src="imagenes/mouse1.png" class="d-block w-20" alt="Slide 1">
+                                <img src="{% static 'productos/imagenes/mouse1.png'%}" class="d-block w-20" alt="Slide 1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Mouse Gaming MMO Logitech G600</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
-                                <img src="imagenes/mouse2.png" class="d-block w-20" alt="Slide 2">
+                                <img src="{% static 'productos/imagenes/mouse2.png'%}" class="d-block w-20" alt="Slide 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>VicTsing Wireless Mouse 2.4G</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
-                                <img src="imagenes/mouse3.png" class="d-block w-20" alt="Slide 3">
+                                <img src="{% static 'productos/imagenes/mouse3.png'%}" class="d-block w-20" alt="Slide 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Redragon M908 Impact RGB</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
@@ -177,21 +179,21 @@
                         </ol>
                         <ul id="articulo4">
                             <li class="carousel-item active">
-                                <img src="imagenes/teclado1.png" class="d-block w-20" alt="Slide 1">
+                                <img src="{% static 'productos/imagenes/teclado1.png'%}" class="d-block w-20" alt="Slide 1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Redragon Kumara K552 White</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
-                                <img src="imagenes/teclado2.png" class="d-block w-20" alt="Slide 2">
+                                <img src="{% static 'productos/imagenes/teclado2.png'%}" class="d-block w-20" alt="Slide 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Cooler Master CK530 V2</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
-                                <img src="imagenes/teclado3.png" class="d-block w-20" alt="Slide 3">
+                                <img src="{% static 'productos/imagenes/teclado3.png'%}" class="d-block w-20" alt="Slide 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Cooler Master CK530 V2</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
@@ -213,21 +215,21 @@
                         </ol>
                         <ul id="articulo5">
                             <li class="carousel-item active">
-                                <img src="imagenes/camara.png" class="d-block w-20" alt="Slide 1">
+                                <img src="{% static 'productos/imagenes/camara.png'%}" class="d-block w-20" alt="Slide 1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Web cam Reddragon</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
-                                <img src="imagenes/microfono.png" class="d-block w-20" alt="Slide 2">
+                                <img src="{% static 'productos/imagenes/microfono.png'%}" class="d-block w-20" alt="Slide 2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>Reddragon Blazar GM300</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
                                 </div>
                             </li>
                             <li class="carousel-item">
-                                <img src="imagenes/auriculares.png" class="d-block w-20" alt="Slide 3">
+                                <img src="{% static 'productos/imagenes/auriculares.png'%}" class="d-block w-20" alt="Slide 3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <p>HyperX Cloud</p>
                                     <a class="compra-aqui" href="#">Compra aquí!</a>
@@ -250,32 +252,32 @@
     <section class="contenedor3">
         <h2>Contamos con marcas reconocidas!</h2>
         <div class="contenedortext">
-            <img src="imagenes/redragon-logo-1.png" alt="">
-            <img src="imagenes/Corsair-Logo-2020.png" alt="">
-            <img src="imagenes/coolermaster.png" alt="">
-            <img src="imagenes/hp.png" alt="">
-            <img src="imagenes/acer.png" alt="">
-            <img src="imagenes/philips.png" alt="">
-            <img src="imagenes/apple.png" alt="">
-            <img src="imagenes/dell.png" alt="">
-            <img src="imagenes/lg.png" alt="">
-            <img src="imagenes/microsoft.png" alt="">
-            <img src="imagenes/toshiba.png" alt="">
-            <img src="imagenes/samsung.png" alt="">
-            <img src="imagenes/lenovo.png" alt="">
-            <img src="imagenes/logitech.png" alt="">
-            <img src="imagenes/hyperx.png" alt="">
-            <img src="imagenes/nvidia.png" alt="">
-            <img src="imagenes/asus.png" alt="">
-            <img src="imagenes/genius.png" alt="">
-            <img src="imagenes/cougar.png" alt="">
-            <img src="imagenes/aoc.png" alt="">
-            <img src="imagenes/msi.png" alt="">
+            <img src="{% static 'productos/imagenes/redragon-logo-1.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/Corsair-Logo-2020.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/coolermaster.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/hp.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/acer.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/philips.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/apple.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/dell.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/lg.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/microsoft.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/toshiba.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/samsung.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/lenovo.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/logitech.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/hyperx.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/nvidia.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/asus.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/genius.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/cougar.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/aoc.png'%}" alt="">
+            <img src="{% static 'productos/imagenes/msi.png'%}" alt="">
         </div>
     </section>
     <h1>Entregamos</h1>
     <section id="contenedor5">
-        <img id="contenedor5img" src="imagenes/ofrecemos.svg" alt="">
+        <img id="contenedor5img" src="{%static 'productos/imagenes/ofrecemos.svg'%}" alt="">
         <div id="caja-ofrecemos">
             <h4><i class="fa-solid fa-medal"></i> Calidad</h4>
             <h4><i class="fa-solid fa-dollar-sign"></i> Buenos precios</h4>
@@ -314,4 +316,6 @@
     <script src="https://kit.fontawesome.com/0113bec5a9.js" crossorigin="anonymous"></script>
 </body>
 
+script>
+    </body>
 </html>
